Fix 'song_count is a negtive num' error